Align marketplace license section buttons and ensure they wrap with correct spacing on smaller screens

--- a/plugins/Marketplace/stylesheets/marketplace.less
+++ b/plugins/Marketplace/stylesheets/marketplace.less
@@ -20,14 +20,21 @@
 .marketplace-paid-intro {
     .licenseKeyText {
         min-width: 210px;
-        .form-group {
+        .form-group,
+        .form-group > .input-field {
             margin-top: 0;
+            margin-bottom: 0;
         }
     }
 
     .licenseToolbar {
+        flex-wrap: wrap;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+
         > a, > div {
             margin-right: 16px;
+            margin-bottom: 1rem;
         }
 
         > a, > div:not(.licenseKeyText) {
